[package]
name = "pai-gst-sequencer"
version = "0.1.0"
authors = ["Laurent Brack <laurent.brack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
gstreamer = "0.16.4"

[dev-dependencies]
cargo2junit = "0.1.6"
