[package]
name = "rocketai"
version = "0.1.0"
authors = ["Laurent Brack <laurent.brack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_okapi = "0.5.1"
pai-gst-sequencer = { path = "../pai-gst-sequencer" }
